@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1967.2.11 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1967.2.12 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -21,7 +21,7 @@
 #
 # See htutils/changes/changes2html script for more details.
 #
-LIST OF CHANGES FROM PREVIOUS RELEASES:			<$Revision: 1.1967.2.11 $>
+LIST OF CHANGES FROM PREVIOUS RELEASES:			<$Revision: 1.1967.2.12 $>
 
 
 Changes from NetBSD 6.0 to NetBSD 7.0:
@@ -523,3 +523,4 @@ Changes from NetBSD 6.0 to NetBSD 7.0:
 		processed sooner. [tls 20141026]
 	viornd(4):	Add driver for VirtIO entropy source available on
 		QEMU, KVM, and Google Compute Engine.  From OpenBSD.
+	service(8): Import adapted script from FreeBSD [ast 20150322]
